Fix footer on mobile. Closes #31

--- a/css/main.scss
+++ b/css/main.scss
@@ -333,6 +333,10 @@ i:hover {
     }
   }
 
+  .col-sm-2 {
+    @media (max-width: 768px) { text-align: center;}
+  }
+
   #footer-logo {
     margin-top: 0;
     border: none;
